Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/filter.scss
+++ b/front-gateway/src/components/Search/style/filter.scss
@@ -14,6 +14,12 @@
   top: 15px;
   z-index: 1099;
 
+  button::after {
+    content: '\f0b0';
+    font-family: FontAwesome;
+    margin-right: 5px;
+  }
+
   @media (min-width: $screen-sm-min) {
     display: none;
   }
@@ -52,6 +58,7 @@
     color: #00f;
     cursor: pointer;
     display: inline-block;
+    margin-bottom: 10px;
     padding: 15px;
     text-decoration: underline;
   }
