--- a/front-gateway/src/components/Search/style/search.scss
+++ b/front-gateway/src/components/Search/style/search.scss
@@ -43,6 +43,7 @@
 
   @media (max-width: $screen-xs-max) {
     height: 100%;
+    padding-top: 0;
   }
 
   .search-results-scroll {
